crates/tests/libs/bindgen/data/error/arch_missing_args/input.rdl
#[win32]
mod Test {
    #[arch]
    struct A { x: u8, }
}
